fixing small things on mobile

--- a/src/assets/sass.scss
+++ b/src/assets/sass.scss
@@ -45,6 +45,7 @@ button{
 } 
 
 #left-button{
+    width:90%;
     flex:1;
     border-left:1px solid $cerulean;
     border-right: 1px solid $cerulean;
@@ -52,6 +53,7 @@ button{
 }
 
 #right-button{
+    width:90%;
     flex:1;
     border-right: 1px solid $cerulean;
 }
@@ -264,11 +266,28 @@ button{
     display:flex;
     align-items: center;
     justify-content: center;
-}
-.button-container img{
-    width:36px;
+    margin:0 auto;
+    max-width: 1600px;
+    width:85%;
+    border-left: 1px solid $cerulean;
+    border-right:1px solid $cerulean;
 }
 
+.btn{
+    width:100%;
+    height: 100%;
+    background-color: white;
+    border: none;
+    font-size: 2rem;
+    color:$cerulean;
+    outline: none;
+}
+
+
+.btn:hover{
+   box-shadow: 0px 0px 8px $cerulean;    
+   z-index:50;
+}
 /*buttons*/
 
 .button-01{
@@ -300,24 +319,8 @@ button{
     border: 2px;
 }
 
-.btn:hover ~ .arrow-container{
-    z-index: 99;
-    background-color: $white;
-    display: flex;
-}
-
-.btn:hover ~ .button-01{
-    border:none;
-}
 
 
-.arrow-container{
-    width:80%;
-    position: absolute;
-    display: none;
-    justify-content: center;
-    
-}
 
 
 
@@ -465,10 +468,10 @@ button{
     .projects-wrapper{
         width:90%;
     }
-
-    .button-01{
+    .button-container{
         width:90%;
     }
+   
 }
 
 @media(max-width:375px){
